layout shift issue sorted

--- a/app/globals.css
+++ b/app/globals.css
@@ -126,5 +126,7 @@
   }
   html {
     @apply font-sans;
+    overflow-y: scroll;
+    scrollbar-gutter: stable;
   }
 }
